# Matcher

./: .gitignore  CMakeLists.txt  README.md
res/: bg.sprite  body_black.sprite  body_blue.sprite  body_green.sprite  body_purple.sprite  body_red.sprite  body_yellow.sprite  bush.sprite  explosion.sprite  eye.sprite  face.sprite  face_blink.sprite  face_blue.sprite  face_brown.sprite  face_green.sprite  face_smile.sprite  fuse_path.path  shadow.sprite
res/originals/: bg_new.psd
scripts/: bake_sprites.py
src/: ActionManager.cpp  ActionManager.h  Background.cpp  Background.h  CountdownEvent.h  CountdownTimer.cpp  CountdownTimer.h  FuseFlame.cpp  FuseFlame.h  Gem.cpp  Gem.h  GemGrid.cpp  GemGrid.h  Globals.h  MatchingLogic.cpp  MatchingLogic.h  MiningZone.cpp  MiningZone.h  ObjectMatrix.h  Point.h  RenderLayers.h  ScoreCounter.cpp  ScoreCounter.h  ScoreEvent.h  SpriteEntity.cpp  SpriteEntity.h  StartZone.cpp  StartZone.h  TextObject.cpp  TextObject.h  WaitTimer.cpp  WaitTimer.h  main.cpp
src/actions/: IAction.h  MoveAction.cpp  MoveAction.h  ScaleAction.cpp  ScaleAction.h  SequenceAction.cpp  SequenceAction.h
